--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -4,7 +4,7 @@
     <!-- BEGIN LOGO -->
     <div class="page-logo">
         <a href="/">
-            <img src="/img/explorer-logo.png" alt="logo" class="logo-default" />
+            <img src="/img/smilo-logo.png" alt="logo" class="logo-default" />
         </a>
     </div>
     <!-- END LOGO -->
@@ -44,7 +44,7 @@
                 <li class="active">
                     <a href="/">Home</a>
                 </li>
-                <li class="menu-dropdown mega-menu-dropdown ">
+                <!-- <li class="menu-dropdown mega-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="/token" class="dropdown-toggle"> Tokens
                         <i class="fa fa-angle-down"></i>
                     </a>
@@ -127,7 +127,7 @@
                             </a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
             </ul>
         </div>
         <!-- END MEGA MENU -->
