--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -4,36 +4,30 @@
         <div class="row">
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                 <h2>About</h2>
-                <p> This is an open source Blockchain Explorer. </p>
-                <p> <a href="https://github.com/ethereumproject/explorer" target="_blank">Fork me on github.</a> </p>
+                <p> This is the Smilo Blockchain Explorer. </p>
             </div>
             <div class="col-md-3 col-sm-6 col-xs-12 footer-block">
                 <h2>Follow Us On</h2>
                 <ul class="social-icons">
                     <li>
-                        <a href="http://www.ethereumclassic.com" data-original-title="rss" class="rss"></a>
+                        <a target="_blank" href="https://www.reddit.com/r/SmiloPlatform/" data-original-title="reddit" class="reddit"></a>
                     </li>
                     <li>
-                        <a href="https://www.reddit.com/r/EthereumClassic" data-original-title="reddit" class="reddit"></a>
+                        <a target="_blank" href="https://t.me/SmiloPlatform/" data-original-title="twitter" class="twitter"></a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/ethereumclassic" data-original-title="twitter" class="twitter"></a>
+                        <a target="_blank" href="https://github.com/Smilo-platform/" data-original-title="github" class="github"></a>
                     </li>
                     <li>
-                        <a href="https://github.com/ethereumproject" data-original-title="github" class="github"></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/smilo-platform-bv/" data-original-title="linkedin" class="linkedin"></a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/ethereum-classic" data-original-title="linkedin" class="linkedin"></a>
+                        <a target="_blank" href="https://www.facebook.com/SmiloPlatform/" data-original-title="facebook" class="facebook"></a>
+                    </li>
+                    <li>
+                        <a target="_blank" href="https://medium.com/smilo-platform" data-original-title="medium" class="medium"></a>
                     </li>
                 </ul>
-            </div>
-            <div class="col-md-6 col-sm-12 col-xs-12 footer-block">
-                <h2>Help, it's Broken!</h2>
-                <address class="margin-bottom-40"> 
-                    <br>Open an Issue: <a href="https://github.com/ethereumproject/explorer/issues">github</a>
-                    <br> <a href="mailto:elaine.ou@gmail.com">Email bug reports</a>
-                    <br> <a href="https://twitter.com/eiaine">Twit</a>
-                </address>
             </div>
         </div>
     </div>
@@ -41,7 +35,7 @@
 <!-- END PRE-FOOTER -->
 <!-- BEGIN POST-FOOTER -->
 <div class="page-footer">
-    <div class="container"> 2017 &copy; Ethereum Classic. </div>
+    <div class="container"> 2018 &copy; Smilo Platform. </div>
 </div>
 <div class="scroll-to-top">
     <i class="icon-arrow-up"></i>
