Added Telegram placeholder and removed Ether mentions

--- a/public/tpl/footer.html
+++ b/public/tpl/footer.html
@@ -27,6 +27,9 @@
                     <li>
                         <a target="_blank" href="https://medium.com/smilo-platform" data-original-title="medium" class="medium"></a>
                     </li>
+                    <li>
+                        <a target="_blank" href="https://t.me/SmiloPlatform/" data-original-title="telegram" class="telegram"></a>
+                    </li>
                 </ul>
             </div>
         </div>
