--- a/public/tpl/header.html
+++ b/public/tpl/header.html
@@ -47,8 +47,8 @@
                 <!-- <li class="menu-dropdown mega-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="/token" class="dropdown-toggle"> Tokens
                         <i class="fa fa-angle-down"></i>
-                    </a>
-                    <ul class="dropdown-menu" style="min-width: 410px">
+                    </a> -->
+                    <!-- <ul class="dropdown-menu" style="min-width: 410px">
                         <li>
                             <div class="mega-menu-content">
                                 <div class="row">
@@ -81,7 +81,7 @@
                             </div>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <li class="menu-dropdown mega-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;" class="dropdown-toggle"> Stats
                         <i class="fa fa-angle-down"></i>
@@ -92,18 +92,22 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         <ul class="mega-menu-submenu">
-                                            <li>
+                                            <!-- <li>
                                                 <a href="/stats/etc_hashrate">
                                                     <i class="fa fa-line-chart"></i> HashRate Growth Chart </a>
-                                            </li>
+                                            </li> -->
                                             <li>
                                                 <a href="/stats/miner_hashrate">
                                                     <i class="fa fa-line-chart"></i> Miner Distribution Chart</a>
                                             </li>
                                             <li>
+                                                <a ng-click='openGlobalJsonUrl()' href="/stats">
+                                                    <i class="fa fa-line-chart"></i> Global JSON statistics</a>
+                                            </li>
+                                            <!-- <li>
                                                 <a href="/stats/The_bomb_chart">
                                                     <i class="fa fa-line-chart"></i> The bomb chart</a>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                 </div>
@@ -111,7 +115,7 @@
                         </li>
                     </ul>
                 </li>
-                <li class="menu-dropdown classic-menu-dropdown ">
+                <!-- <li class="menu-dropdown classic-menu-dropdown ">
                     <a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown" href="javascript:;"> Misc
                         <i class="fa fa-angle-down"></i>
                     </a>
